--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
             <template class="template">
                 <div class="cities__element">
                     <button class="city_name"></button>
-                    <!-- <h3 class="country_name"></h3>
-                    <h4 class="population"></h4>
-                    <h5 class="coordinates"></h5> -->
                 </div>
             </template> 
         </section>
         <section class="card">
-            <h2 class="subtitle">City info</h2>
+            <template class="template_city">
+                <h2 class="city_name_card"></h2>
+                <h3 class="country_name"></h3>
+                <h4 class="population"></h4>
+                <h5 class="coordinates"></h5>
+            </template>
         </section>
     </main>   
   </body>
