render and remove cards

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
                 </div>
             </template> 
         </section>
-        <section class="card">
+        <section class="cards_holder">
             <template class="template_city">
-                <h2 class="city_name_card"></h2>
-                <h3 class="country_name"></h3>
-                <h4 class="population"></h4>
-                <h5 class="coordinates"></h5>
+                <div class="card">
+                    <h2 class="city_name_card"></h2>
+                    <h3 class="country_name"></h3>
+                    <h4 class="population"></h4>
+                    <h5 class="coordinates"></h5>
+                </div>
             </template>
         </section>
     </main>   
