search render with duplication

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                          required
                   />
                 </fieldset>
-                <button class='search_search-button' type='button'>x</button>
+                <button class='search_clear-button invisible' type='button'>X</button>
               </form>
             <template class="template">
                 <div class="cities__element">
